fix img distortion issue

--- a/src/Weather/Weather.css
+++ b/src/Weather/Weather.css
@@ -64,3 +64,14 @@
 .Weather > form .RadioButtons label > input{
   float: left;
 }
+
+.Weather .getByGeo{
+  width: 100%;
+  padding: 1rem;
+  border-radius: 0 0 1rem 1rem;
+  border: none;
+  border-top: 1px #333 solid;
+  background-color: rgba(31, 30, 30, 0.647);
+  font-weight: bold;
+  font-family: inherit;
+}
