--- a/src/Weather/WeatherDisplay/WeatherDisplay.css
+++ b/src/Weather/WeatherDisplay/WeatherDisplay.css
@@ -1,14 +1,16 @@
 .WeatherDisplay{
-  margin: 50px 10px;
+  margin: 50px 50px;
   display: flex;
-  justify-content: space-around;
-  width: 100%;
+  justify-content: space-between;
+  width:calc(100%-100px);
   height: auto;
 }
 .WeatherDisplay img {
   background: rgba(215, 176, 176, 0.647);
   padding:30px;
   border-radius: 50%;
+  width: 100px;
+  height: 100px;
 }
 .ErrorMsg{
   display: flex;
